Custom GIS Fields Files modified - [ManageGISData,EditGISRecord,cx2]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -74,7 +74,7 @@
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn76">
                                                 <wm-form-field name="rentalProperty" displayname="Rental Property" show="true" primary-key="false" generator="assigned" key="rentalProperty" type="boolean" readonly="false" required="false" widget="checkbox"
-                                                defaultvalue="false"></wm-form-field>
+                                                defaultvalue="false" placeholder=""></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow6">
@@ -169,6 +169,25 @@
                                                 hint="If selected, appropriate safety precautions should be taken when visiting this property." placeholder=""></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn1" columnwidth="4"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow1">
+                                            <wm-gridcolumn name="gridcolumn2" columnwidth="4">
+                                                <wm-form-field name="custom1" displayname="Custom1" show="true" primary-key="false" generator="assigned" key="custom1" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn name="gridcolumn3" columnwidth="4">
+                                                <wm-form-field name="custom2" displayname="Custom2" show="true" primary-key="false" generator="assigned" key="custom2" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn name="gridcolumn4" columnwidth="4">
+                                                <wm-form-field name="custom3" displayname="Custom3" show="true" primary-key="false" generator="assigned" key="custom3" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow2">
+                                            <wm-gridcolumn name="gridcolumn5" columnwidth="4">
+                                                <wm-form-field name="custom4" displayname="Custom4" show="true" primary-key="false" generator="assigned" key="custom4" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="8" name="gridcolumn86_2">
+                                                <wm-form-field name="custom5" displayname="Custom5" show="true" primary-key="false" generator="assigned" key="custom5" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
