--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -391,7 +391,7 @@
                                                     <wm-grid-row-action key="deleterow" display-name="" show="bind:!((row.getProperty('outcome')=='Requested')||(row.getProperty('outcome')=='Scheduled')||(row.getProperty('outcome')=='Rescheduled')||(row.getProperty('outcome')=='Cancelled')||(row.getProperty('outcome')=='Pass'))"
                                                     class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
-                                                <wm-liveform novalidate="false" errormessage="The Outcome Order must be unique. Please select a different number." title="Outcome Options" formlayout="dialog" iconclass="wi wi-thumbs-up-down" dataset="bind:Variables.InspectionOutcomeData.dataSet"
+                                                <wm-liveform novalidate="false" errormessage="The Outcome Order must be unique. Please select a different number." title="Inspection Outcome Options" formlayout="dialog" iconclass="wi wi-control-point" dataset="bind:Variables.InspectionOutcomeData.dataSet"
                                                 captionalign="left" captionposition="top" name="liveformOutcome">
                                                     <wm-layoutgrid columns="1" name="layoutgrid4_1">
                                                         <wm-gridrow name="gridrow46_1">
@@ -550,7 +550,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="viewtrue">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Outcome Fees" iconclass="wi wi-attach-money" name="dialogOutcomeFee">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Outcome Fees" iconclass="wi wi-attach-money" name="dialogOutcomeFee" class="modal-larger">
             <wm-label name="labelOutcomeFees" caption="These are the fees that are associated with the selected inspection outcome. You can set a single flat fee, or multiple fees that escalate each time this inspection outcome occurs."></wm-label>
             <wm-livegrid formlayout="dialog" name="livegridOutcomeFee">
                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.InspectionOutcomeFeeData.dataSet" navigation="Classic" name="gridOutcomeFee" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
@@ -559,6 +559,7 @@
                     <wm-grid-column binding="amount" caption="Fee Amount" type="float" generator="assigned" formatpattern="toCurrency" currencypattern="USD" fractionsize="2" edit-widget-type="number" show="true" readonly="false"></wm-grid-column>
                     <wm-grid-column binding="accountCode" caption="Accounting Code" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                     <wm-grid-action key="addNewRow" display-name="New Fee" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Fee" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                    <wm-grid-action key="customButton" display-name="Close" title="Close" value="" iconclass="wi wi-cancel" class="btn-secondary" show="true" action="Widgets.dialogOutcomeFee.close()" shortcutkey=""></wm-grid-action>
                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                 </wm-grid>
@@ -590,9 +591,6 @@
                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                 </wm-liveform>
             </wm-livegrid>
-            <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
-            </wm-dialogactions>
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view4">
