--- a/src/main/webapp/pages/CompanyDetails/CompanyDetails.html
+++ b/src/main/webapp/pages/CompanyDetails/CompanyDetails.html
@@ -191,10 +191,28 @@
                             </wm-gridrow>
                         </wm-layoutgrid>
                     </wm-tabpane>
-                    <wm-tabpane name="tabpaneDocuments" title="Documents">
+                    <wm-tabpane name="tabpaneDocuments" title="Documents" on-select="tabpaneDocumentsSelect($event, $scope)">
                         <wm-layoutgrid name="layoutgrid6">
                             <wm-gridrow name="gridrow18">
-                                <wm-gridcolumn columnwidth="12" name="gridcolumn39"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn39">
+                                    <wm-livegrid formlayout="dialog" name="livegrid5">
+                                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvDocuments.dataSet" navigation="Classic" name="gridDocuments" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                                            <wm-grid-column binding="filename" caption="File Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="mimetype" caption="File Type" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="dateCreated" caption="Date Created" type="datetime" primary-key="false" generator="assigned" edit-widget-type="datetime" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateCreated') | toLocalDateString}}</wm-grid-column>
+                                            <wm-grid-column binding="users.fullName" caption="Created By" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text"
+                                            show="true" related-entity-name="Users"></wm-grid-column>
+                                            <wm-grid-action key="addNewRow" display-name="Add Attachment" show="true" class="btn-success" iconclass="wi wi-plus" title="Add Attachment" action="Widgets.dialogUploadDocument.open()" accessroles="Inspector,InspectorManager,CodeManager,CodeOfficer,CXAdmin,MunicipalityAdmin"
+                                            shortcutkey="" disabled="false"></wm-grid-action>
+                                            <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-file-download" title="Download" action="Variables.svDownloadDocument.invoke()" accessroles="Authenticated"
+                                            disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.confirmdialogDeleteDocument.open()" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin"
+                                            disabled="false"></wm-grid-row-action>
+                                        </wm-grid>
+                                    </wm-livegrid>
+                                </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow19">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn41"></wm-gridcolumn>
@@ -205,4 +223,38 @@
             </wm-gridcolumn>
         </wm-gridrow>
     </wm-layoutgrid>
+    <wm-view class="dialog-view" name="viewUploadDocument">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Document Upload" iconclass="wi wi-attach-file" name="dialogUploadDocument" on-close="dialogUploadDocumentClose($event, $scope)">
+            <wm-layoutgrid name="layoutgrid23">
+                <wm-gridrow name="gridrow32">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn82_0">
+                        <wm-label padding="unset 0.5em 2em 0.5em" caption="Click the &quot;Choose Files&quot; button to select one or many documents you would like to submit to the municipality, then click the &quot;Upload&quot; button to attach the file(s)."
+                        name="label82_0"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow20" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn37">
+                        <wm-composite name="compositeMunicipalities">
+                            <wm-label class="col-md-3 control-label" name="label2" caption="Select Municipality"></wm-label>
+                            <wm-container class="col-md-9" name="container1">
+                                <wm-select name="selectMunicipalityForDoc" dataset="bind:Variables.lvVendorMunicipalities.dataSet" datafield="All Fields" displayfield="municipalities.municipalityName" datavalue="bind:Variables.lvVendorMunicipalities.firstRecord"></wm-select>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow85">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn167">
+                        <input type="file" name="docsToUpload" ng-file-model="docsToUpload" multiple="">
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions5">
+                <wm-button class="btn-primary" caption="Upload" on-click="buttonUploadFileClick($event, $scope)" name="buttonUploadFile" iconclass="wi wi-file-upload" disabled="bind:docsToUpload.length === 0"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button13" on-click="Widgets.dialogUploadDocument.close()" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-confirmdialog name="confirmdialogDeleteDocument" title="Delete Document" iconclass="wi wi-delete" message="Are you sure you want to delete this ?" on-ok="Variables.lvDeleteDocument.deleteRecord()"></wm-confirmdialog>
+    </wm-view>
 </wm-partial>
