--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -143,6 +143,7 @@
             </wm-dialogactions>
             <wm-container name="containerVendor" content="CompanyDetails">
                 <wm-param name="companyID" value="bind:Variables.stvSelectedVendor.dataSet.dataValue" type="integer"></wm-param>
+                <wm-param name="municipalityId" value="bind:Widgets.selectMunicipalites.datavalue.ID" type="integer"></wm-param>
             </wm-container>
         </wm-dialog>
     </wm-view>
