--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -159,7 +159,7 @@
                                                 placeholder="Enter number"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
-                                        <wm-gridrow name="gridrow27">
+                                        <wm-gridrow name="gridrow27" padding="unset unset 4em unset">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn54">
                                                 <wm-form-field name="usedFor" displayname="Use" show="true" primary-key="false" generator="assigned" key="usedFor" type="string" readonly="false" required="false" widget="text" maxchars="1000" placeholder="Enter use"
                                                 inputtype="text"></wm-form-field>
@@ -168,26 +168,26 @@
                                                 <wm-form-field name="isHostile" displayname="Is Hostile?" show="true" primary-key="false" generator="assigned" key="isHostile" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="false"
                                                 hint="If selected, appropriate safety precautions should be taken when visiting this property." placeholder=""></wm-form-field>
                                             </wm-gridcolumn>
-                                            <wm-gridcolumn name="gridcolumn1" columnwidth="4"></wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow1">
                                             <wm-gridcolumn name="gridcolumn2" columnwidth="4">
-                                                <wm-form-field name="custom1" displayname="Custom1" show="true" primary-key="false" generator="assigned" key="custom1" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="custom1" displayname="Custom 1" show="true" primary-key="false" generator="assigned" key="custom1" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn3" columnwidth="4">
-                                                <wm-form-field name="custom2" displayname="Custom2" show="true" primary-key="false" generator="assigned" key="custom2" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="custom2" displayname="Custom 2" show="true" primary-key="false" generator="assigned" key="custom2" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn4" columnwidth="4">
-                                                <wm-form-field name="custom3" displayname="Custom3" show="true" primary-key="false" generator="assigned" key="custom3" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="custom3" displayname="Custom 3" show="true" primary-key="false" generator="assigned" key="custom3" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow2">
                                             <wm-gridcolumn name="gridcolumn5" columnwidth="4">
-                                                <wm-form-field name="custom4" displayname="Custom4" show="true" primary-key="false" generator="assigned" key="custom4" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="custom4" displayname="Custom 4" show="true" primary-key="false" generator="assigned" key="custom4" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
                                             </wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="8" name="gridcolumn86_2">
-                                                <wm-form-field name="custom5" displayname="Custom5" show="true" primary-key="false" generator="assigned" key="custom5" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn86_2">
+                                                <wm-form-field name="custom5" displayname="Custom 5" show="true" primary-key="false" generator="assigned" key="custom5" type="string" readonly="false" required="false" widget="text" maxchars="255"></wm-form-field>
                                             </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn91"></wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
